# fastapi-microservices-example

./: pyproject.toml
.github/workflows/: build.pipeline.yaml
cast-service/app/tests/: test_hello.py
