[tool.poetry]
name = "fastapi-microservices-example"
version = "0.1.0"
description = ""
authors = ["abhishekk40"]
readme = "README.md"
packages = [
    {include = "cast-service"},
    {include = "movie-service"}]

[tool.poetry.dependencies]
python = ">=3.11"
pre-commit = ">=4.3.0,<5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"